--- a/workshop01/src/main/resources/templates/index.html
+++ b/workshop01/src/main/resources/templates/index.html
@@ -2,7 +2,46 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Landing Page</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        
+        img {
+            max-width: 300px; 
+            height: auto;
+        }
+
+        
+        p {
+            margin: 10px 0;
+        }
+
+        
+        h1, a {
+            margin: 5px 0;
+        }
+
+        
+        a {
+            text-decoration: none;
+            color: #007bff; 
+        }
+
+        .quote {
+            font-style: italic;
+            font-size: 1.5em; 
+            margin: 20px;
+        }
+    </style>
 </head>
 <body>
     
@@ -10,10 +49,11 @@
 
     
     <p>
-        <a href="https://github.com/">Repository</a>
+        <h1>Repository</h1>
+        <h1><a href="https://github.com/domteow/k8s-course-repo">https://github.com/domteow/k8s-course-repo</a></h1>
     </p>
 
     
-    <p th:text="${quote}"></p>
+    <p class="quote" th:text="${quote}"></p>
 </body>
 </html>
